# Homework_31

./: pyproject.toml
Homework_28v2/: settings.py  urls.py
ads/: models.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_category_slug_alter_ad_name_alter_ad_price.py  0004_alter_ad_description.py
ads/views/: ad.py  category.py
avito/: settings.py  urls.py
datasets/: ad.json  data.py  user.csv  user.json
selections/: models.py  permissions.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py
tests/: factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0002_rename_location_user_location_id.py  0003_rename_location_id_user_location.py  0003_user_birth_date_alter_user_email.py  0004_alter_user_location.py  0005_alter_user_location.py  0006_rename_location_user_location_id.py  0007_rename_location_id_user_location.py  0008_rename_location_user_locations.py  0009_alter_user_options.py  0010_alter_location_lat_alter_location_lng.py  0011_rename_locations_user_location.py  0012_rename_location_user_location_id.py  0013_rename_location_id_user_location.py  0014_remove_user_location_user_location.py  0015_remove_user_location_user_location.py  0016_remove_user_location_user_location.py
